--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,21 @@
 .header {
     background: red;
 }
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0.25rem 0.5rem;
+    display: flex;
+    gap: 1rem;
+    background-color: #f5f5f5;
+}
+
+nav ul li {
+    padding: 0.25rem 0.5rem;
+}
+
+nav ul li:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+}
